<resources>
    <string name="app_name">Pelise</string>
    <string name="action_settings">settings</string>
    <string name="sort_by">Sort_Movies</string>
    <string name="most_popular">Popular</string>
    <string name="top_rated">Top Rated</string>
    <string name="nofav">no array movies</string>
    <string name="title">title</string>
    <string name="subtitle">description</string>
    <string name="fav_removed">favorite removed</string>
    <string name="added_to_favorites">favorite_added</string>
    <string name="favorite">Favorite</string>
    <string name="search">search</string>
    <string name="sort_by_favorite">sort_by_favorite</string>
    <string name="settings">settings</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_notifications">Notifications</string>
    <string name="summary_choose_ringtone">Choose notification sound</string>
    <string name="pref_header_about">About</string>
    <string name="summary_about">This App offers you information on different movies old/new releases, for film lovers!</string>
    <string name="app_version">1.5</string>
    <string name="summary_support">Got any queries? We are happy to help!</string>
    <string name="title_send_feedback">Send Feedback</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="url_privacy">https://www.iubenda.com/privacy-policy/8284227</string>
    <string name="title_terms">Terms &amp; Conditions</string>
    <string name="title_version">Version</string>
    <string name="choose_email_client">Choose email client</string>
    <string name="title_gallery_storage">Default Storage</string>
    <string name="title_new_notification_sound">New message notification</string>
    <string name="title_vibrate">Vibrate</string>
    <string name="summary_vibrate">Vibrate on new notification</string>
    <string name="key_upload_over_wifi">key_upload_over_wifi</string>
    <string name="key_gallery_name">key_gallery_name</string>
    <string name="notifications_new_message">notifications_new_message</string>
    <string name="key_notifications_new_message_ringtone">key_notifications_new_message_ringtone</string>
    <string name="key_vibrate">key_vibrate</string>
    <string name="key_send_feedback">key_send_feedback</string>
    <string name="google_logout">Log_Out</string>
    <string name="google_logouts">Logout</string>
    <string name="btn_link_to_register">Not a member? Get registered now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authenticated failed, check your email and password or sign up</string>
    <string name="prompt_email">Enter Email Address</string>
    <string name="prompt_password">Enter Passsword</string>
    <string name="question_forgot_password">Forgot Your Password?</string>
    <string name="btn_forgot_password">forgot password</string>
    <string name="item_description">the description of individual items will be placed here</string>
    <string name="forgot_password_msg">We just need your registered Email address to send you password reset instruction.</string>
    <string name="email">Email</string>
    <string name="textEmail">textEmailAddress</string>
    <string name="hint_password">Password</string>
    <string name="btn_reset_password">reset password</string>
    <string name="btn_login">Login</string>
    <string name="logout">logout</string>
    <string name="hint_email">Email</string>
    <string name="btn_back"><![CDATA[ << Back]]></string>
    <string name="action_sign_in_short">Register</string>
    <string name="Register_id">Enter Your registered email id</string>
    <string name="instruction_id">We have sent you instructions to reset password</string>
    <string name="password_short">Password too short</string>
    <string name="hint_name">FullName</string>
    <string name="painting">Painting</string>
    <string name="Books">Books</string>
    <string name="mAuth_failed">Authentication failed</string>
    <string name="createUserEmail">createUserWithEmail:onComplete</string>

    <string name="activity_details">Movie Details</string>
    <string name="vote_average">TMDb: %1$s/10</string>
    <string name="title_movie_list">Peliss</string>
    <string name="category_display_preferences">Display Preferences</string>
    <string name="add_to_favorites">Add Favorites </string>
    <string name="favorites">favorites</string>
    <string name="watch_trailer">Watch Preview</string>
    <string name="action_fav">Favorite</string>
    <string name="action_share">Share</string>
    <string name="action_favorite">Favorites</string>

    <string name="remove_from_favorites">Remove From Favorites</string>
    <string name="pref_popular_value">popularity.desc</string>
    <string name="pref_top_rated_value">vote_average.desc</string>
    <string name="sort_array_item_3">Favorites</string>
    <string name="share_trailer">Share Trailer</string>
    <string name="pref_favorite_value">favorite.desc</string>
    <string name="title_activity_movie_detail">MovieDetailActivity</string>
    <string name="invite">invite</string>
    <string name="title_for_empty_view_favorites">no internet connection available</string>
    <string name="text_for_empty_view_favorites">no internet connection available</string>
    <string name="unavailable">no internet connection</string>
    <string name="Movies">Movies</string>
    <string name="nowplaying">Now Paying</string>
    <string name="now_playing">Now Playing</string>
    <string name="upcoming">Upcoming</string>
    <string name="error_msg_unknown">unknown error occurred</string>
    <string name="error_msg_no_internet">no internet connection</string>
    <string name="error_msg_timeout">timed out</string>
    <string name="btn_retry">try again</string>
    <string name="loading">Loading</string>
    <string name="facebook_app_id">146695912562284</string>
    <string name="Logout">Logout</string>
    <string name="key_logout">logoutkey</string>
    <string name="google_play_error">google play error</string>
    <string name="invitation_title">Pelise</string>
    <string name="invitation_message">Share Pelise With Your Friends!</string>
    <string name="invitation_deep_link">Pelise is Free! Share with Friends</string>
    <string name="invitation_cta">Share Pelise!!!!</string>
    <string name="item_title">title</string>


</resources>
